Update .example.env with CLOUDFLARE_R2_PUBLIC_ENDPOINT

--- a/.example.env
+++ b/.example.env
@@ -17,6 +17,7 @@ CLOUDFLARE_R2_BUCKET='your-cloudflare-r2-bucket'
 CLOUDFLARE_R2_ACCESS_KEY_ID='your-cloudflare-r2-access-key-id'
 CLOUDFLARE_R2_SECRET_KEY='your-cloudflare-r2-secret-key'
 CLOUDFLARE_R2_BUCKET_ENDPOINT='your-cloudflare-r2-bucket-endpoint'
+CLOUDFLARE_R2_PUBLIC_ENDPOINT='your-public-url.r2.dev'
 
 # Redis Configuration
 REDIS_HOST='your-redis-host'
