--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 Django>=5
 django-compressor>=4.5.1
-django-storages[s3]
+django-storages==1.14
 python-decouple>=3.8
 django-redis>=5.4.0
 psycopg2-binary>=2.9.9
 Markdown>=3.7
 pillow>=10.4.0
 djlint>=1.35.2
+gunicorn>=23.0.0
