--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 Django>=5
 django-compressor>=4.5.1
 django-storages>=1.14.4
+boto3>=1.35.14
 python-decouple>=3.8
 django-redis>=5.4.0
 psycopg2-binary>=2.9.9
