Add resume page with layout, content, and styling; update links in about section

--- a/data/about.yaml
+++ b/data/about.yaml
@@ -1,5 +1,5 @@
 name: "Rajarshi Samaddar"
-about: "Developer, entrepreneur, and tech optimist. Founder & Lead Dev at <a href='https://ridotech.com' target='_blank'>Ridotech</a> (ai-driven agency). Mentors juniors, solves complex backend challenges. Seeking full-time backend roles. View my resume <a href='/Resume.pdf' target='_blank'>here</a>."
+about: "Developer, entrepreneur, and tech optimist. Founder & Lead Dev at <a href='https://ridotech.com' target='_blank'>Ridotech</a> (ai-driven agency). Mentors juniors, solves complex backend challenges. Seeking full-time backend roles. View my resume <a href='/resume/'>here</a>."
 skills:
   - React.js
   - Redux
